# messenger-auto-reply-bot

./: .env.example  .gitignore  CODEX.md  Dockerfile  Makefile  README.md  README_PLAYWRIGHT.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py  ai_reply.py  browser_config.py  browser_messenger_bot.py  config.py  main.py  meta_client.py  rule_engine.py  security.py
config/: reply_rules.example.json
docs/: architecture.md  browser-automation.md  deployment.md  gpt-image-guide.md  setup.md
sample_payloads/: message.json
scripts/: run_browser_messenger_bot.py  smoke_test.py
tests/: test_browser_messenger_bot.py  test_rule_engine.py  test_security.py  test_webhook.py
